# pyo3-extension-template

./: README.md
.github/workflows/: build.yml
template/: Cargo.toml  LICENSE  README.md  cargo-generate.toml  pyproject.toml  tox.ini
template/.github/workflows/: build-release-maturin.yaml  build-release.yaml
template/src/: lib.rs
template/tests/: test_sum.py
