[build-system]
requires = ["maturin>=1.0,<2.0", "setuptools"]
build-backend = 'maturin'

[project]
name = "{{ crate_name }}"
license = { file = "LICENSE" }
version = "0.1.0"
authors = [
    {name = "{{ authors }}"}
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Rust',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
]
readme = "README.md"

